--- a/Assets/style.css
+++ b/Assets/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 textarea {
-  background: transparent;
+  background: whitesmoke;
   border: none;
   resize: none;
   color: #000000;
@@ -68,4 +68,8 @@ textarea {
 .saveBtn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
+}
+
+.border {
+
 }
