--- a/Assets/style.css
+++ b/Assets/style.css
@@ -42,17 +42,17 @@ textarea {
   border-top: 1px dashed #000000;
 }
 
-.past {
+.past #timeblocks {
   background-color: #d3d3d3;
   color: white;
 }
 
-.present {
+.present #timeblocks {
   background-color: #ff6961;
   color: white;
 }
 
-.future {
+.future #timeblocks {
   background-color: #77dd77;
   color: white;
 }
