--- a/Assets/style.css
+++ b/Assets/style.css
@@ -42,17 +42,17 @@ textarea {
   border-top: 1px dashed #000000;
 }
 
-.past #timeblocks {
+.past .time-block {
   background-color: #d3d3d3;
   color: white;
 }
 
-.present #timeblocks {
+.present .time-block {
   background-color: #ff6961;
   color: white;
 }
 
-.future #timeblocks {
+.future .time-block {
   background-color: #77dd77;
   color: white;
 }
